# psc-vimscript

./: .gitignore  Makefile  README.md  psc-vimscript.cabal  stack.yaml  test.vimrc  todo.txt
app/: Main.hs
example/: Makefile  run.vim  test.vimrc
example/src/: Main.vim
lib/purescript-control/src/Control/: Extend.vim
lib/purescript-eff/src/Control/Monad/: Eff.vim
lib/purescript-foldable-traversable/src/Data/: Foldable.vim  FunctorWithIndex.vim  Traversable.vim
lib/purescript-prelude/src/Control/: Apply.vim  Bind.vim
lib/purescript-prelude/src/Data/: Bounded.vim  Eq.vim  EuclideanRing.vim  Functor.vim  HeytingAlgebra.vim  Ring.vim  Semigroup.vim  Semiring.vim  Show.vim  Unit.vim
lib/purescript-prelude/src/Data/Ord/: Unsafe.vim
src/: Lib.hs  ZEncoding.hs
src/Vimscript/: AST.hs  Render.hs
test/purs-src/: Array.js  Array.purs  Array.vim  Main.js  Main.purs  Main.vim
