name:                psc-vimscript
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/owickstrom/psc-vimscript#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Oskar Wickström
maintainer:          Oskar Wickström <oskar.wickstrom@gmail.com>
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Vimscript.AST
                       Vimscript.Render
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unordered-containers
                     , hashable
                     , mainland-pretty
                     , mtl
                     , purescript
                     , text
                     , uniplate
  default-language:    Haskell2010
  ghc-options:         -Wall

executable psc-vimscript
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , mainland-pretty
                     , purescript
                     , text
                     , psc-vimscript
  default-language:    Haskell2010

test-suite psc-vimscript-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , psc-vimscript
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owickstrom/psc-vimscript
